Verbatim link instead of href, so you can see the link

--- a/tex/documentation.tex
+++ b/tex/documentation.tex
@@ -147,8 +147,13 @@ The code from multiple tests, averages around 39 times the speed increase from t
 code.
 
 \section{Sources}
-\href{https://stackoverflow.com/questions/18749493/openmp-drastically-slows-down-for-loop/18763554#18763554}{Stack Overflow Loop Fusing link}. \\
-\href{https://stackoverflow.com/questions/3219393/stdlib-and-colored-output-in-c}{Stacker Overflow Coloured Terminal Printing link}.
+\begin{verbatim}
+https://stackoverflow.com/questions/18749493/
+openmp-drastically-slows-down-for-loop/18763554#18763554}
+
+https://stackoverflow.com/questions/3219393/
+stdlib-and-colored-output-in-c}
+\end{verbatim}
 % -- Bibliography (APA style)
 %\bibliography{references}
 
