--- a/beamer/presentation.tex
+++ b/beamer/presentation.tex
@@ -306,8 +306,18 @@ With test conv 128 128 7 256 256, we can get to nearly 90x speed increase. \\
 \end{frame}
 
 \begin{frame}[fragile]
-\frametitle{Graphs}
-%\includegraphics[width=1\textwidth]{images/stoker-89x}
+\frametitle{Graphing up to 128 kernel\_orders}
+\includegraphics[width=0.7\textwidth]{images/Stoker-32-32}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Graphing up to 128 kernel\_orders}
+\includegraphics[width=0.7\textwidth]{images/Stoker-64-64}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Graphing up to 128 kernel\_orders}
+\includegraphics[width=0.7\textwidth]{images/Stoker-100-100}
 \end{frame}
 
 \end{document}
