Added slides to presentation

--- a/beamer/presentation.tex
+++ b/beamer/presentation.tex
@@ -306,6 +306,16 @@ With test conv 128 128 7 256 256, we can get to nearly 90x speed increase. \\
 \end{frame}
 
 \begin{frame}[fragile]
+\frametitle{Image Size and Speed Increase}
+\includegraphics[width=1\textwidth]{images/Image_size_vs_time_X-X-5-32-32}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Image Size and Speed Increase}
+\includegraphics[width=1\textwidth]{images/kernel_vs_time_64-64-X-32-32}
+\end{frame}
+
+\begin{frame}[fragile]
 \frametitle{Graphs}
 %\includegraphics[width=1\textwidth]{images/stoker-89x}
 \end{frame}
