--- a/beamer/presentation.tex
+++ b/beamer/presentation.tex
@@ -12,6 +12,46 @@
 \frame{\titlepage}
 
 \begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/opening_slide_joke1}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/opening_slide_joke2}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/opening_slide_joke3}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/opening_slide_joke4}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/dereference_j_1}
+\end{frame}
+  
+\begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/dereference_j_2}
+\end{frame}
+  
+\begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/dereference_j_3}
+\end{frame}
+  
+\begin{frame}[fragile]
+\frametitle{A look into the development process}
+\includegraphics[width=1\textwidth]{images/dereference_j_4}
+\end{frame}
+
+\begin{frame}[fragile]
 \frametitle{Bad Spatial Locality}
 number of channels: 32..2048 (always powers of 2) \\
 kernel order: 1, 3, 5, or 7
