--- a/tex/documentation.tex
+++ b/tex/documentation.tex
@@ -15,7 +15,7 @@
     linktoc=all,     %set to all if you want both sections and subsections linked
 }
 
-\title{CSU33014 Lab 2: Parallel multichannel multikernel convolution}
+\title{CSU33014 Lab 2: Parallel Multichannel Multikernel Convolution}
 \author{Alexander Sepelenco 20335014, Niall Sauvage 20334203\\
   \small{Trinity College Dublin}
 }
@@ -24,13 +24,13 @@
 \begin{document}
 
 \maketitle
-\tableofcontents
+%\tableofcontents
 
-\newpage    
 \section{How to run the code}
 Our code was designed with Stoker in mind, in order to ensure the
-same compilation, Our Makefile is attachted with our submission, 
-use it in order to ensure one to one compilation.
+same compilation, Our Makefile is attached with our submission, 
+use it in order to ensure one to one compilation. 
+Either use `make run` to run a defined `COMMAND` or `make all` to only compile.
 
 \section{Parallel multichannel convolution}
 Parallel multichannel convolution consists of 3d images, 4d kernels, that means there
@@ -51,12 +51,12 @@ This allowed us to minimise time spent waiting for memory accesses and minimise 
 
 \subsection{Loop Fusing}
 The discussion on loop fusing was inspired from searching for optimisation strategies online.
-This stackoverflow discussion on loop fusing was beneficial in our programme, 
-This example below is how loop fusing works, given nested arrays, they can mathematically be combined into 
-one using division and modulus. In fact this seems slower, however due to the ability to parallelise more
-effectively division is the least of our problems. In fact this has an openmp name, collapse(). However 
-we decided to do it manually as it was our first solution, and it is clearer to the programmer rather than
-having it behind a macro of openmp.
+The stackoverflow discussion on loop fusing below was beneficial in our programme, however it could
+have also been done using OpenMP and loop collapsing. This example below is how loop fusing works, 
+given nested arrays, they can mathematically be combined into one using division and modulus. 
+In fact this seems slower, however due to the ability to parallelise more effectively division is 
+the least of our problems. In fact this has an openmp name, collapse(). However we decided to do it 
+manually as it was our first solution, and it is clearer to the programmer rather than having it behind a macro of openmp.
 
 \subsection{Unrolling}
 In order to increase cache hits, we attempted to unroll the inner (or tight) loop. Initially this was done 
@@ -65,10 +65,11 @@ As we were doing two calculations per loop iteration, we could then do a loop of
 be usable with any correct kernel. However, by inspecting the size of the executable, we noticed that the size did not change
 with or without the directive, implying it was not working. Moreover, we discovered we could do 4 instructions per tight loop
 as we could load 4 image values into a vector, cast the lowest two to doubles, multiply them and then shuffle our original vector
-such that we could then repeat the process with the upper two lanes. We then decided to manually unroll the loop, as is shown in 
-the final version of our code. This allowed us less branches and greater cache hit rate.
+such that we could then repeat the process with the upper two lanes. We then decided to manually unroll the loop to do 16 doubles
+as it was most optimal for our needs. This allowed us less branches and more computation on what we care about. It works out most
+of the time, as the nchannels is the loop that was unrolled meaning that nchannels works best when a big number and it starts at
+16 and goes to 2048, which is quite good for loop unrollling. 
 
-\newpage
 \begin{verbatim}
 for ( m = 0; m < nkernels; m++ ) {
     for ( h = 0; h < height; h++ ) {
@@ -89,7 +90,6 @@ for (int n = 0; n < (nkernels*width*height); n++) {
 }
 \end{verbatim}
 
-
 \subsection{Vectorisation}
 Effective vectorisation requires the arrays to be loaded in contiguous memory from an array. The
 original section of the code however only has 1 array be in contiguous memory, since we would like to
@@ -103,7 +103,9 @@ SSE1-4. SSE part requires loading as float casting to double, then loading our d
 the two vectors against each other, adding them up for all the channels, and then once the kernel\_order on x an y of kernels
 has been executed sum up the vector using a single hadd instruction. The reason is because \_\_m128d \_mm\_hadd\_pd(v4sum), only
 stores two lanes, therefore 1 instruction is needed rather than the typical four we would see with float vectors (\_\_mm128).
-\newpage
+An attempt was made for chaining loads by splitting into many vector variables, however it ended up being slower probably because
+of the memory being taxed too much and the need to use many SSE vectors in which we have a limited supply off. Shuffling is
+used to optimise out an extra load, and \_MM\_SHUFFLE is optimised out by precalculating the value that the macro generates.. 
 \begin{verbatim}
 // Transpose Kernel
 #pragma omp parallel for // maybe this will numb the pain
@@ -123,10 +125,7 @@ for(int n = 0; n < (nkernels*nchannels*kernel_order); n++){
             (double) kernel[kernel_total_offset_precalc + y];
     }
 }
-
-// code
-// __m128d v4sum = _mm_setzero_pd();
-// ... more for loops ...
+#define SHUFFLE_MASK 0b1110
 // Vectorised Section
         for ( c = 0; c < nchannels; c+=2 ) {
             // t_kernel is aligned hence the load instead of loadu
@@ -142,7 +141,7 @@ for(int n = 0; n < (nkernels*nchannels*kernel_order); n++){
             v4sum = _mm_add_pd(v4sum, product);
 
             c+=2;
-            v4image_1d = _mm_shuffle_ps(v4image_1d, v4image_1d, _MM_SHUFFLE(0, 0, 3, 2));
+            v4image_1d = _mm_shuffle_ps(v4image_1d, v4image_1d, SHUFFLE_MASK);
             v4image_1d_pd = _mm_cvtps_pd(v4image_1d);
 
             v4t_kernel_pd = _mm_load_pd(t_kernel+kernel_total_offset+c);
@@ -151,13 +150,12 @@ for(int n = 0; n < (nkernels*nchannels*kernel_order); n++){
             v4sum = _mm_add_pd(v4sum, product);
 
             c+=2;
-            //unrolled 8 times
+            //unrolled for 16 computations at a time 
         }
     }
 }
 v4sum = _mm_hadd_pd(v4sum, v4sum); // add the two lanes together and put in lower lane
 output1d[m * width_times_height + w * height + h] = (float) _mm_cvtsd_f64(v4sum); // extract lower double 
-// .. end of for loops
 \end{verbatim}
 Since nchannels is guaranteed to be a power of 2, a postloop is not required for this for loop.
 
@@ -174,14 +172,10 @@ __m128d _mm_load_pd(double const * mem_addr); // load 16 byte aligned memory loc
 \section{Speed Tests}
 Tested using ./conv 128 128 7 128 128 
 \begin{verbatim}
-David conv time: 24483093 microseconds
-Student conv time: 602688 microseconds
-The total speed up time was 40.62x and 23880405 microseconds less
+David conv time: 24594400 microseconds
+Student conv time: 487744 microseconds
+The total speed up time was 50.42x and 24106656 microseconds less
 COMMENT: sum of absolute differences (0.000000) within acceptable range (0.062500)
-
-David conv time: 24629741 microseconds
-Student conv time: 629424 microseconds
-The total speed up time was 39.13x and 24000317 microseconds less
 \end{verbatim}
 The code from multiple tests, averages around 39 times the speed increase from the original
 code.
